linux (3.2.21-3) UNRELEASED; urgency=low

  * driver core: remove __must_check from device_create_file
    (fixes FTBFS on sparc)
  * i2400m: Disable I2400M_SDIO; hardware did not reach production
  * apparmor: remove advertising the support of network rules from
    compat iface (Closes: #676515)
  * xen/netfront: teardown the device before unregistering it (Closes: #675190)

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Jun 2012 02:56:49 +0100

linux (3.2.21-2) unstable; urgency=low

  * [i386] cpufreq/gx: Fix the compile error
  * [powerpc] Enable PPC_DISABLE_WERROR (fixes FTBFS)
  * tracing/mm: Move include of trace/events/kmem.h out of header into slab.c
    (fixes FTBFS on sparc)
  * [i386] Disable incomplete lguest support
  * udeb: Add missing dependencies for various modules (see #678587)
    - [armel/kirkwood] fb-modules depends on kernel-image
    - [ia64] nic-usb-modules depends on kernel-image, nic-shared-modules,
      usb-modules
    - [ia64] sata-modules depends on kernel-image, scsi-core-modules
    - [ia64] scsi-modules depends on scsi-core-modules
    - [ia64,powerpc,ppc64] pcmcia-modules depends on kernel-image
    - [powerpc,ppc64] nic-pcmcia-modules depends on kernel-image,
      nic-shared-modules, pcmcia-modules
    - [powerpc,ppc64,x86] scsi-modules depends on ata-modules
    - [x86] nic-extra-modules depends on i2c-modules
  * wacom: do not crash when retrieving touch_max (Closes: #678798)
  * wacom: Revert unintended changes to handling of Tablet PCs
    (Closes: #677164)
  * linux-image, README.Debian: Suggest debian-kernel-handbook package

  [ Arnaud Patard ]
  * [armel, armhf] backport BPF JIT support

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 26 Jun 2012 01:56:42 +0100

linux (3.2.21-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.21
    - NFSv4.1: Fix a request leak on the back channel