@@ -6,6 +6,8 @@ linux (3.2.21-3) UNRELEASED; urgency=low
   * apparmor: remove advertising the support of network rules from
     compat iface (Closes: #676515)
   * xen/netfront: teardown the device before unregistering it (Closes: #675190)
+  * linux-{doc,manual,source,support}: Mark as capable of satisfying
+    relations from foreign packages (Multi-Arch: foreign) (Closes: #679202)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 27 Jun 2012 02:56:49 +0100
 
